Uklonjeni svi HiChat nazivi, uklonjen 'terms' i dodatk pozivni broj

--- a/Ionic Source/platforms/android/assets/www/templates/settings/languages.html
+++ b/Ionic Source/platforms/android/assets/www/templates/settings/languages.html
@@ -13,7 +13,7 @@
 		<i class="icon ion-ios-arrow-right"></i></a>
 	<a class="item item-icon-right" ng-click="showPopupSettingsFonts()">
 		<span>Select font</span>
-		<p ng-if="settings.languages.font">Hichat fonts</p>
+		<p ng-if="settings.languages.font">rebrand.im fonts</p>
 		<p ng-if="!settings.languages.font">System fonts</p>
 		<i class="icon ion-ios-arrow-right"></i></a>
 </div>
