--- a/Ionic Source/platforms/android/assets/www/templates/settings/messages.html
+++ b/Ionic Source/platforms/android/assets/www/templates/settings/messages.html
@@ -19,7 +19,7 @@
      </label>
 	</li>
 	<li class="item item-toggle">
-	<span>Reply SMS with Hichat</span><p>Turn on to reply text messages via Hichat</p>
+	<span>Reply SMS with rebrand.im</span><p>Turn on to reply text messages via rebrand.im</p>
      <label class="toggle toggle-calm" ng-click="changeMessages('reply_sms')">
        <input type="checkbox" ng-model="settings.messages.reply_sms">
        <div class="track">
@@ -67,7 +67,7 @@
 	<i class="icon ion-ios-arrow-right"></i></a>
 	<a class="item item-icon-right"><span>Backup & Restore</span><p>Backup messages to server and restore them on demand</p>
 	<i class="icon ion-ios-arrow-right"></i></a>
-	
+
 	<div class="item item-divider light-bg stable">Incomming Messages</div>
 	<li class="item item-toggle">
 	<span>Play sound on incoming messages</span><p>On incoming messages</p>
