--- a/Ionic Source/www/templates/sign/walkthrough.html
+++ b/Ionic Source/www/templates/sign/walkthrough.html
@@ -6,9 +6,9 @@
 		<div class="bg-full" id="brandName"></div>
 		<div class="bg-full" id="logo"></div>
 		<p id="getStartedText">Cross platform chat app</p>
-		<div id="terms">
+		<!-- <div id="terms">
 			<a href="#" id="termsLink">Terms and conditions</a>
-		</div>
+		</div> -->
 		<button ui-sref="register" class="button button-positive width-60 margin-auto" id="getStartedBtn">GET STARTED</button>
 	</div>
 </ion-content>
