--- a/Ionic Source/platforms/android/assets/www/templates/contacts/update.html
+++ b/Ionic Source/platforms/android/assets/www/templates/contacts/update.html
@@ -7,7 +7,7 @@
   <h1 class="title">Update phonebook</h1>
 </ion-header-bar>
  <ion-content scroll="false" class="stable-bg">
-	<div class="text-center padding">Hichat friends in phonebook will automatically added to Hichat contact</div>
+	<div class="text-center padding">rebrand.im friends in phonebook will automatically added to rebrand.im contact</div>
 	<div ng-show="lastupdate" class="light-bg padding margin-horizontal"><div>Last updated:</div>
 	<h4>{{lastupdate | date:'HH:mm, dd/MM/yyyy'}}</h4></div>
 	<button ng-click="updateContacts()" ng-disabled="!contacts" class="button button-small button-positive padding-horizontal margin-auto width-50">UPDATE</button>
