--- a/Ionic Source/www/templates/settings/contacts.html
+++ b/Ionic Source/www/templates/settings/contacts.html
@@ -11,7 +11,7 @@
 	<a class="item item-icon-right" ui-sref="tab.updateContacts"><span>Update phonebook</span><p ng-show="lastUpdate">Last updated: {{lastUpdate | date:'HH:mm, dd/MM/yyyy'}}</p>
 		<i class="icon ion-ios-arrow-right"></i></a>
 	<li class="item item-toggle">
-	<span>Auto sync contacts</span><p>On/Off auto sync phone contacts. turn on this mode to keep your Hichat contacts turn on this</p>
+	<span>Auto sync contacts</span><p>On/Off auto sync phone contacts. turn on this mode to keep your rebrand.im contacts turn on this</p>
      <label class="toggle toggle-calm" ng-click="changeContacts('auto_sync')">
        <input type="checkbox" ng-model="settings.contacts.auto_sync">
        <div class="track">
@@ -19,7 +19,7 @@
        </div>
      </label>
 	</li>
-	<a class="item item-icon-right" ng-click="showPopupSettingsListFriends()"><span>Show friends in contacts</span><p>Friends who use Hichat</p>
+	<a class="item item-icon-right" ng-click="showPopupSettingsListFriends()"><span>Show friends in contacts</span><p>Friends who use rebrand.im</p>
 		<i class="icon ion-ios-arrow-right"></i></a>
 </div>
 </ion-content>
